[kstyle]: Make buttons use KColorScheme::Button for hover and focus colours

BUG: 426651